Added image processing dependencies

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,16 @@ pysftp = "*"
 requests = "*"
 pillow = "*"
 paramiko = ">=2,<3" 
+dotenv = "*"
+langchain = "*"
+langchain-community = "*"
+langgraph = "*"
+langchain-core = "*"
+langchain-google-vertexai = "*"
+opencv-python = "*"
+numpy = "*"
+rembg = "*"
+pydantic = "*"
 
 [dev-packages]
 autopep8 = "*"
